tests/snapshot/error/source_locations/expression/unary/neg.exp
TypeError: symbol cannot be converted to number
  ┌ source_locations/expression/unary/neg.js:1:1
  |
1 | -Symbol.iterator;
  | ^
Stack trace:
  at <global> (source_locations/expression/unary/neg.js:1:1)